# investment-scan-multi-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: sp500_tickers.txt
deploy/systemd/: invest-scan.service
src/invest_scan/: autoscan.py  db.py  main.py  models.py  settings.py  symbols.py  ttl_cache.py
src/invest_scan/agents/: __init__.py  intraday_trigger_agent.py  market_data_agent.py  news_agent.py  risk_agent.py  signals_agent.py  summary_agent.py  ticker_discovery_agent.py
src/invest_scan/api/: __init__.py  routes.py
src/invest_scan/services/: config_service.py  intraday_service.py  journal_service.py  market_scan_service.py  portfolio_agent.py  portfolio_service.py  ranking_service.py  recommendation_service.py  scan_service.py  trade_service.py  universe_service.py
src/invest_scan/ui/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_config_intraday_api.py  test_config_portfolio_and_plan_api.py  test_intraday_trigger_agent.py  test_marketscan_failure_diagnostics.py  test_mechanisms.py  test_portfolio.py  test_sentinel_prompt_gaps.py  test_stooq_fallback_http.py  test_ticker_discovery_agent.py  test_ui.py  test_universe_yahoo_screener.py  test_yfinance_fallback_yahoo_chart.py
